infrastructure/aws/cloudformation/Networking/template.json
{
   "AWSTemplateFormatVersion":"2010-09-09",
   "Parameters":{
      "VPCName":{
         "Type":"String"
      },
      "PrivateRouteTableName":{
         "Type":"String"
      },
      "PublicRouteTableName":{
         "Type":"String"
      },
      "WebGroup":{
         "Type":"String"
      },
      "DBGroup":{
         "Type":"String"
      },
      "LoadBalancerGroup": {
         "Type":"String"
      }
   },
   "Resources":{
      "csye6225Vpc":{
         "Type":"AWS::EC2::VPC", 
         "Properties":{
            "CidrBlock":"10.0.0.0/16",
            "EnableDnsSupport":"true",
            "EnableDnsHostnames":"true",
            "InstanceTenancy":"default",
            "Tags":[
               {
                  "Key":"Name",
                  "Value":{
                     "Ref":"VPCName"
                  }
               }
            ]
         }
      },
      "csye6225InternetGateway":{
         "Type":"AWS::EC2::InternetGateway",
         "Properties":{
            "Tags":[
               {
                  "Key":"Name",
                  "Value":"csye6225CfInternetGateway"
               }
            ]
         }
      },
      "csye6225AttachGateway":{
         "Type":"AWS::EC2::VPCGatewayAttachment",
         "Properties":{
            "VpcId":{
               "Ref":"csye6225Vpc"
            },
            "InternetGatewayId":{
               "Ref":"csye6225InternetGateway"
            }
         }
      },
      "csye6225PublicRouteTable":{
         "Type":"AWS::EC2::RouteTable",
         "Properties":{
            "VpcId":{
               "Ref":"csye6225Vpc"
            },
            "Tags":[
               {
                  "Key":"Name",
                  "Value":{
                     "Ref":"PublicRouteTableName"
                  }
               }
            ]
         }
      },
      "csye6225PublicRoute":{
         "Type":"AWS::EC2::Route",
         "DependsOn":"csye6225AttachGateway",
         "Properties":{
            "RouteTableId":{
               "Ref":"csye6225PublicRouteTable"
            },
            "DestinationCidrBlock":"0.0.0.0/0",
            "GatewayId":{
               "Ref":"csye6225InternetGateway"
            }
         }
      },
      "csye6225PublicSubnet":{
         "Type":"AWS::EC2::Subnet",
         "Properties":{
            "MapPublicIpOnLaunch":true,
            "VpcId":{
               "Ref":"csye6225Vpc"
            },
            "CidrBlock":"10.0.0.0/24",
            "AvailabilityZone":"us-east-1a",
            "Tags":[
               {
                  "Key":"Name",
                  "Value":"PublicWebServerSubnet"
               }
            ]
         }
      },
      "csye6225PublicSubnet2":{
         "Type":"AWS::EC2::Subnet",
         "Properties":{
            "MapPublicIpOnLaunch":true,
            "VpcId":{
               "Ref":"csye6225Vpc"
            },
            "CidrBlock":"10.0.2.0/24",
            "AvailabilityZone":"us-east-1b",
            "Tags":[
               {
                  "Key":"Name",
                  "Value":"PublicWebServerSubnet2"
               }
            ]
         }
      },
      "csye6225PublicSubnetRouteTableAssociation":{
         "Type":"AWS::EC2::SubnetRouteTableAssociation",
         "Properties":{
            "SubnetId":{
               "Ref":"csye6225PublicSubnet"
            },
            "RouteTableId":{
               "Ref":"csye6225PublicRouteTable"
            }
         }
      },
      "csye6225PublicSubnetRouteTableAssociation2":{
         "Type":"AWS::EC2::SubnetRouteTableAssociation",
         "Properties":{
            "SubnetId":{
               "Ref":"csye6225PublicSubnet2"
            },
            "RouteTableId":{
               "Ref":"csye6225PublicRouteTable"
            }
         }
      },
      "csye6225PrivateRouteTable":{
         "Type":"AWS::EC2::RouteTable",
         "Properties":{
            "VpcId":{
               "Ref":"csye6225Vpc"
            },
            "Tags":[
               {
                  "Key":"Name",
                  "Value":{
                     "Ref":"PrivateRouteTableName"
                  }
               }
            ]
         }
      },
      "csye6225PrivateRoute":{
         "Type":"AWS::EC2::Route",
         "DependsOn":"csye6225AttachGateway",
         "Properties":{
            "RouteTableId":{
               "Ref":"csye6225PrivateRouteTable"
            },
            "DestinationCidrBlock":"0.0.0.0/0",
            "GatewayId":{
               "Ref":"csye6225InternetGateway"
            }
         }
      },
      "csye6225PrivateSubnet":{
         "Type":"AWS::EC2::Subnet",
         "Properties":{
            "MapPublicIpOnLaunch":false,
            "VpcId":{
               "Ref":"csye6225Vpc"
            },
            "CidrBlock":"10.0.1.0/24",
            "AvailabilityZone":"us-east-1e",
            "Tags":[
               {
                  "Key":"Name",
                  "Value":"PrivateDBServerSubnet"
               }
            ]
         }
      },
      "csye6225PrivateSubnetRouteTableAssociation":{
         "Type":"AWS::EC2::SubnetRouteTableAssociation",
         "Properties":{
            "SubnetId":{
               "Ref":"csye6225PrivateSubnet"
            },
            "RouteTableId":{
               "Ref":"csye6225PrivateRouteTable"
            }
         }
      },
      "DBServersSecurityGroup":{
         "Type":"AWS::EC2::SecurityGroup",
         "Properties":{
            "GroupDescription":"Security group for RDS instances",
            "VpcId":{
               "Ref":"csye6225Vpc"
            },
            "Tags":[
               {
                  "Key":"Name",
                  "Value":{
                     "Ref":"DBGroup"
                  }
               }
            ],
            "SecurityGroupIngress":[
               {
                  "IpProtocol":"tcp",
                  "FromPort":"3306",
                  "ToPort":"3306",
                  "SourceSecurityGroupId":{
                     "Ref":"LoadBalancerSecurityGroup"
                  }
               }
            ]
         }
      },
      "WebServersSecurityGroup" : {
         "Type" : "AWS::EC2::SecurityGroup",
         "Properties" : {
            "GroupDescription" : "Security Group  to host web applications",
            "VpcId" : {"Ref" : "csye6225Vpc"},
            "Tags" : [ { "Key" : "Name", "Value" :{ "Ref" : "WebGroup" } } ],
            "SecurityGroupIngress" : [
               {
                  "IpProtocol" : "tcp",
                  "FromPort" : "8080",
                  "ToPort" : "8080",
                  "SourceSecurityGroupId": {
                     "Ref":"LoadBalancerSecurityGroup"
                  }
               }
            ]
         }
      },
      "LoadBalancerSecurityGroup": {
         "Type":"AWS::EC2::SecurityGroup",
         "Properties":{
            "GroupDescription":"Security Group to host a load balancer",
            "VpcId":{
               "Ref":"csye6225Vpc"
            },
            "Tags":[ { "Key":"Name", "Value":{ "Ref":"LoadBalancerGroup" } } ],
            "SecurityGroupIngress":[
               {
                  "IpProtocol":"tcp",
                  "FromPort":"443",
                  "ToPort":"443",
                  "CidrIp":"0.0.0.0/0"
               },
               {
                  "IpProtocol":"tcp",
                  "FromPort":"8080",
                  "ToPort":"8080",
                  "CidrIp":"0.0.0.0/0"
               }
            ]
         }
      }
   }
}
